# projet_mlops

./: .gitignore  DEPLOY_README.md  Dockerfile  README.md  TEST_README.md  WITHOUT_DOCKER_README.md  architecture_plan.md  main.ipynb  mlflow.db  preprocessor.pkl  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  main-checkpoint.ipynb  requirements-checkpoint.txt
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
.virtual_documents/: main.ipynb
config/: config.yaml
data/: X_test_clean.csv  X_train_clean.csv  y_test.csv  y_train.csv
mlflow_run/0/: meta.yaml
mlflow_run/108358635103368534/: meta.yaml
mlflow_run/142457034204099968/: meta.yaml
mlflow_run/155871618107678770/: meta.yaml
mlflow_run/231975655115258684/: meta.yaml
mlflow_run/423420637280329013/: meta.yaml
mlflow_run/697414080860412169/: meta.yaml
mlflow_runs/0/: meta.yaml
mlflow_runs/471231030860250034/: meta.yaml
mlflow_runs/989647242103337564/: meta.yaml
mlruns/169767272771812276/: meta.yaml
mlruns/175533410696236916/: meta.yaml
mlruns/181770883814999009/: meta.yaml
mlruns/268140480193584021/: meta.yaml
mlruns/424088674470414333/: meta.yaml
scripts/: config.yaml  data_loader.py  deploy_pipeline_prod.py  deploy_server.py  make_predictions.py  pipeline.py  pipeline_2.py  pipeline_3.py  pipeline_logistic_regression_one_flow.py  pipeline_logisticregression _task_oriented.py  pipeline_random_forest__one_flow.py  pipeline_randomforest_task_oriented.py  preprocess_model.py  preprocessing.py  quality_checks.py  server.py  validate_model.py
(+636 files in other folders)
