[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "Machine learning project lifecycle using Great expectation-Prefect-Mlflow"
authors = ["Kamul ALI NASSOMA WATTARA <74007906+Kamul-droid@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
great-expectations = "0.15.0"
fastapi = "*"
uvicorn = "0.20.0"
pylance = "^0.19.1"
mlflow = "^2.17.2"
prefect = "^3.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
jupyterlab = "^4.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
poethepoet = "^0.27.0"
mypy = "^1.10.1"
black = "^24.10.0"
pandas="1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = { cmd = "ruff format --check ." }
format-fix = { cmd = "ruff format ." }
lint = { cmd = "ruff check .." }
lint-fix = { cmd = "ruff check --fix .." }
typecheck = { cmd = "mypy .." }

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py312"
